# cva6-softcore-contest

./: .gitignore  .gitmodules  0001-coremark-modification.patch  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  coremark.patch  framebuffer.c  save.sv
core/: Flist.cva6
core/frontend/: btb.sv
core/include/: cv32a6_im_contest_config_pkg.sv
corev_apu/fpga/: Makefile  cva6.cfg  cva6_fpga.xpr
corev_apu/tb/: ariane_axi_soc_pkg.sv  ariane_peripherals.sv  ariane_soc_pkg.sv  ariane_tb.sv  ariane_testharness.sv  jtag_pkg.sv  tb_cva6_zybo_z7_20.sv
cva6-sdk/: .gitmodules  Makefile
cva6-sdk/configs/: buildroot32_defconfig  buildroot64_defconfig  linux32_defconfig
cva6-sdk/linux_patch/: cvga.patch
cva6-sdk/opensbi/: README.md
cva6-sdk/rootfs/: demo.lmp
fpga/: Makefile  openocd_diligent_hs2.cfg
fpga/constraints/: cva6_fpga.xdc  zybo_z7_20.xdc
fpga/scripts/: compile_lib.tcl  get_hs2_sn.tcl  program_cva6_fpga.tcl  ps7_init.tcl  run_cva6_fpga.tcl  run_cva6_power_analysis.tcl  run_cva6_sim.tcl  sim_routed.udo
fpga/src/: ariane_peripherals_xilinx.sv  cva6_zybo_z7_20.sv  zybo-z7-20-ddr.svh  zybo-z7-20.svh
include/: ariane_axi_pkg.sv  ariane_pkg.sv  riscv_pkg.sv
src/: ariane.sv  axi_adapter.sv  axi_adapter_32.sv  csr_regfile.sv  load_store_unit.sv
sw/: README.md
tb/: ariane_tb.sv  ariane_testharness.sv  jtag_pkg.sv  tb_cva6_zybo_z7_20.sv
zephyr-docker/: Dockerfile  README.md
zephyr-docker/workspace/perf_baseline/: CMakeLists.txt  prj.conf
zephyr-docker/workspace/perf_baseline/src/: funclib.c  funclib.h  testapp.c
(+77 files in other folders)
